# greenhires.com

./: README.md
greenhires.com-BE/: .env  .env.example  .env.production  .flake8  .gitignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose-prod.yml  docker-compose.yml  dtest.yml  justfile  nginx.sh  pyproject.toml  pytest.ini  run.sh  serverless.yaml
greenhires.com-BE/alembic/: env.py
greenhires.com-BE/gunicorn/: gunicorn_conf.py
greenhires.com-BE/scripts/: downgrade  format  makemigrations  start-dev.sh  start-pro.sh
greenhires.com-BE/scripts/postgres/: backup  restore
greenhires.com-BE/src/: config.py  constants.py  database.py  main.py  model.py  schema.py
greenhires.com-BE/src/ai/: __init__.py  model.py  parser.py  prompts.py  router.py  schema.py  service.py
greenhires.com-BE/src/auth/: config.py  constants.py  dependencies.py  exceptions.py  jwt.py  model.py  router.py  schema.py  security.py  service.py  utils.py
greenhires.com-BE/src/blog/: model.py  router.py  schema.py  service.py
greenhires.com-BE/src/external_service/: aws.py  redis.py  upload_server.py
greenhires.com-BE/src/general/: model.py  router.py  schema.py  service.py
greenhires.com-BE/src/job/: model.py  router.py  schema.py  service.py
greenhires.com-BE/src/notification/: model.py  router.py  schema.py  service.py
greenhires.com-BE/src/payment/: model.py  router.py  schema.py
greenhires.com-BE/src/resume/: dependency.py  model.py  router.py  schema.py  service.py
greenhires.com-BE/src/sample/: model.py  (+5 more)
greenhires.com-BE/tests/: conftest.py
(+905 files in other folders)
